--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,29 @@
-name: Deploy to Azure App Service
+name: Deploy Node.js app to Azure
 
 on:
   push:
     branches:
-      - main
+      - main  # Change this to your deployment branch if different
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout source
+      # Step 1: Checkout code
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Node.js version
-        uses: actions/setup-node@v4
+      # Step 2: Log in to Azure
+      - name: Log in to Azure
+        uses: azure/login@v1
         with:
-          node-version: "18.x"
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Deploy to Azure App Service
+      # Step 3: Deploy to Azure Web App
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: DeployNodeApp
-          publish-profile: ${{ secrets.MAZ_SECRET_DEPLOY }}
-          package: .
+          app-name: mapd713nodeapi
+          slot-name: production
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
